Fixed learning plan on mobile

--- a/src/components/learningPlan/LearningPlan.module.scss
+++ b/src/components/learningPlan/LearningPlan.module.scss
@@ -5,9 +5,10 @@
     z-index: 1;
     &__header {
         height: 1.5rem;
-        width: 70%;
-        max-width: 15rem;
-        min-width: 10rem;
+        width: 13rem;
+        // width: 70%;
+        // max-width: 15rem;
+        // min-width: 10rem;
         margin: auto;
         padding: 0.2rem 1rem 0.2rem 1rem;
         border-radius: 1rem;
